Fixes read more link, that wrapped its content.

--- a/client/views/report/report.scss
+++ b/client/views/report/report.scss
@@ -31,6 +31,10 @@ figure#projectImage {
   }
 }
 
+.read-more {
+  display: inline-block;
+}
+
 .affix,.affix-top {
    position:static;
 }
